chore: Swagger 개발 서버 추가, JWT 인증 추가 (#80)